--- a/myPollsProject/poll/templates/createPoll.html
+++ b/myPollsProject/poll/templates/createPoll.html
@@ -25,8 +25,7 @@
 					If you don't have an account, You can <a href="{% url 'user_register' %}">register here</a>
 				</div>
 				
-			{% else %}
-				
+			{% else %}				
 				<form method="POST" class="form createPollForm" action="{% url 'savePoll' %}">
 					{% csrf_token %}
 					<textarea class="form-control" placeholder="Add your question or topic" name="question" onfocus="checklength()" onkeyup="checklength()"></textarea>
@@ -34,7 +33,12 @@
 					<br>
 					<button type="button" class="btn btn-primary" onclick="addOption()"> Add option </button>			
 					<div class="optionarea" id="optionarea"></div>
-					<br>
+					<br>					
+					<div class="form-check form-switch">
+						<input class="form-check-input" type="checkbox" role="switch" name="anonymous-poll" id="flexSwitchCheckDefault">
+						<label class="form-check-label" for="flexSwitchCheckDefault">Create Poll as anonymous</label>
+					</div>
+					<hr>
 					<button type="submit" class="btn btn-dark">
 						Create Poll
 					</button>
