--- a/myPollsProject/poll/templates/index.html
+++ b/myPollsProject/poll/templates/index.html
@@ -10,13 +10,15 @@
 	</head>
 	<body>
 		<div class="container">
+			{% include 'messages.html' %}
 			<h1>Poll</h1>
 			<a class="btn btn-primary btn-lg" href="{% url 'createPoll' %}">Create</a>
 			<a class="btn btn-primary btn-lg" href="{% url 'listPolls' %}">View Polls</a>
 			<br>
 
 			{% if request.user.is_authenticated %}
-				<a> Welcome {{ request.user.username }}</a>				
+				<a> Welcome {{ request.user.username }}</a>
+				
 			{% else %}
 				<a href="{% url 'user_login' %}">Login</a>
 				<a href="{% url 'user_register' %}">Register</a>
