--- a/myPollsProject/poll/templates/navbar.html
+++ b/myPollsProject/poll/templates/navbar.html
@@ -12,7 +12,7 @@
 
 <!-- Tempus Dominus Styles -->
 <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@eonasdan/tempus-dominus@6.9.4/dist/css/tempus-dominus.min.css" crossorigin="anonymous"> -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-purple fixed-top">
 	<div class="container-fluid">
 		<a class="navbar-brand" href="{% url 'index' %}">PollBooth</a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -83,3 +83,7 @@
 		</div>
 	</div>
 </nav>
+<br>
+<br>
+
+
