--- a/myPollsProject/poll/templates/index.html
+++ b/myPollsProject/poll/templates/index.html
@@ -26,7 +26,7 @@
 		</header>
 		<section class="features py-5 font-arial">
 			<div class="container">
-				<h2 class="text-center mb-4 bg-purple text-white">Features</h2>
+				<h2 class="text-center mb-4">Features</h2>
 				<div class="row">
 					<div class="col-md-4">
 						<div class="card mb-3">
