--- a/myPollsProject/poll/templates/navbar.html
+++ b/myPollsProject/poll/templates/navbar.html
@@ -28,6 +28,15 @@
 							class="nav-link" 
 						{% endif %}
 						aria-current="page" href="{% url 'index' %}">Home</a>
+				</li>
+				<li class="nav-item">
+					<a 
+						{% if 'contact' in request.path %}
+							class="nav-link active" 
+						{% else %}
+							class="nav-link" 
+						{% endif %}
+						aria-current="page" href="{% url 'contact' %}">Contact</a>
 				</li>				
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
